# rmpd

./: .env  .gitignore  README.md  pyproject.toml
src/rmpd/: __init__.py  __main__.py
